# Lopt_pvt

./: .gitignore  README.md
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/routes/: analyze.py
frontend/: .env.example  package-lock.json  package.json
frontend/landing/: index.html  package-lock.json  package.json
frontend/landing/js/: CustomPass.js  app.js
frontend/src/: index.css  main.jsx
frontend/src/assets/images/: image2.avif
frontend/src/components/: AnimateUnderlineText.jsx  Card.jsx  Carousel.jsx  CustomCursor.jsx  Footer.jsx  MenuBar.jsx  NavBar.jsx  routes.jsx
frontend/src/components/static/: samples.js
frontend/src/components/utility/: Details.jsx  Header.jsx  NavBar.jsx
frontend/src/hooks/: useMousePosition.jsx
frontend/src/lib/: api.js
frontend/src/pages/: Home.jsx  Playground.jsx
models/: README.md
models/image/: README.md  pyproject.toml
models/image/notebooks/: virtus.ipynb
models/image/scripts/: model.py
models/video/Notebook/: Scarlet.ipynb
models/video/outputs/: metrics.json
